logs/dag_id=my_weather_workflow_DAG_v04/run_id=manual__2024-06-01T044253.478399+0000/task_id=group_tasks.create_table_weather_postgresql/attempt=3.log
[2024-06-01T05:11:59.448+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-01T05:11:59.470+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: my_weather_workflow_DAG_v04.group_tasks.create_table_weather_postgresql manual__2024-06-01T04:42:53.478399+00:00 [queued]>
[2024-06-01T05:11:59.478+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: my_weather_workflow_DAG_v04.group_tasks.create_table_weather_postgresql manual__2024-06-01T04:42:53.478399+00:00 [queued]>
[2024-06-01T05:11:59.480+0000] {taskinstance.py:2306} INFO - Starting attempt 3 of 8
[2024-06-01T05:11:59.493+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): group_tasks.create_table_weather_postgresql> on 2024-06-01 04:42:53.478399+00:00
[2024-06-01T05:11:59.501+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=5040) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-06-01T05:11:59.502+0000] {standard_task_runner.py:63} INFO - Started process 5042 to run task
[2024-06-01T05:11:59.501+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'my_weather_workflow_DAG_v04', 'group_tasks.create_table_weather_postgresql', 'manual__2024-06-01T04:42:53.478399+00:00', '--job-id', '563', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag.py', '--cfg-path', '/tmp/tmpz1dkgzrq']
[2024-06-01T05:11:59.503+0000] {standard_task_runner.py:91} INFO - Job 563: Subtask group_tasks.create_table_weather_postgresql
[2024-06-01T05:11:59.562+0000] {task_command.py:426} INFO - Running <TaskInstance: my_weather_workflow_DAG_v04.group_tasks.create_table_weather_postgresql manual__2024-06-01T04:42:53.478399+00:00 [running]> on host cd9caf1c47f0
[2024-06-01T05:11:59.654+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Khang' AIRFLOW_CTX_DAG_ID='my_weather_workflow_DAG_v04' AIRFLOW_CTX_TASK_ID='group_tasks.create_table_weather_postgresql' AIRFLOW_CTX_EXECUTION_DATE='2024-06-01T04:42:53.478399+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-01T04:42:53.478399+00:00'
[2024-06-01T05:11:59.656+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-01T05:11:59.668+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS weathers(
  fk_city varchar(20) REFERENCES cities(wiki_id),

  weather_description VARCHAR(255) NOT NULL,
  temp_celsius DOUBLE PRECISION NOT NULL,
  min_temp_celsius DOUBLE PRECISION,
  max_temp_celsius DOUBLE PRECISION,
  pressure DOUBLE PRECISION,
  humidity DOUBLE PRECISION NOT NULL,
  wind_speed DOUBLE PRECISION NOT NULL,
  time_of_record timestamp NOT NULL,
  sunrise_time timestamp,
  sunset_time timestamp,
);
[2024-06-01T05:11:59.681+0000] {base.py:84} INFO - Using connection ID 'postgres_connection_id' for task execution.
[2024-06-01T05:11:59.694+0000] {base.py:84} INFO - Using connection ID 'postgres_connection_id' for task execution.
[2024-06-01T05:11:59.702+0000] {sql.py:470} INFO - Running statement: CREATE TABLE IF NOT EXISTS weathers(
  fk_city varchar(20) REFERENCES cities(wiki_id),

  weather_description VARCHAR(255) NOT NULL,
  temp_celsius DOUBLE PRECISION NOT NULL,
  min_temp_celsius DOUBLE PRECISION,
  max_temp_celsius DOUBLE PRECISION,
  pressure DOUBLE PRECISION,
  humidity DOUBLE PRECISION NOT NULL,
  wind_speed DOUBLE PRECISION NOT NULL,
  time_of_record timestamp NOT NULL,
  sunrise_time timestamp,
  sunset_time timestamp,
);, parameters: None
[2024-06-01T05:11:59.703+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-01T05:11:59.704+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 14: );
         ^

[2024-06-01T05:11:59.718+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=my_weather_workflow_DAG_v04, task_id=group_tasks.create_table_weather_postgresql, run_id=manual__2024-06-01T04:42:53.478399+00:00, execution_date=20240601T044253, start_date=20240601T051159, end_date=20240601T051159
[2024-06-01T05:11:59.730+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 563 for task group_tasks.create_table_weather_postgresql (syntax error at or near ")"
LINE 14: );
         ^
; 5042)
[2024-06-01T05:11:59.757+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-01T05:11:59.802+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-01T05:11:59.806+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
